// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`straight mb lock holds ball 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "yellowArrow",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSS7": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "kickerEnable": true,
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLowerRamp": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "outhole": false,
    "popper": false,
    "rampUp": true,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank46",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank47",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank48",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank49",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank50",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank51",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse53",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides52",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles56",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Spinner58",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 200,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides59",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter62",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter63",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter64",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter65",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter66",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter67",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete61",
                    "state": Object {},
                  },
                  Object {
                    "children": Array [],
                    "name": "StraightMb71",
                    "state": Object {
                      "awardingJp": 0,
                      "curBank": undefined,
                      "jackpotLit": false,
                      "lockPost": false,
                    },
                  },
                  Object {
                    "children": Array [],
                    "name": "Skillshot72",
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball60",
                "state": Object {},
              },
            ],
            "name": "Player55",
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "lowerRampLit": false,
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "poker": undefined,
              "rampUp": true,
              "score": 10000,
            },
          },
        ],
        "name": "Game54",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine45",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 0,
        "lastChange": 37060,
        "lastClosed": 36793,
        "lastOpened": 37060,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      "lockDown": true,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb ramp lowers 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "kickerEnable": true,
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLowerRamp": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [
      "Green",
    ],
    "lRampStartMb": Array [
      "White",
    ],
    "lShooterShowCards": Array [
      "Green",
    ],
    "lShooterStartHand": Array [
      "White",
    ],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank11",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank12",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank13",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank14",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank15",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank16",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse18",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides17",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles21",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Poker22",
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 9,
                      "suit": "c",
                    },
                    Object {
                      "flipped": true,
                      "num": 6,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 6,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 7,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "flipped": true,
                      "num": 11,
                      "suit": "d",
                    },
                  ],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 12,
                      "suit": "c",
                    },
                    Object {
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "num": 2,
                      "suit": "c",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 4,
                      "suit": "d",
                    },
                    Object {
                      "num": 5,
                      "suit": "h",
                    },
                    Object {
                      "num": 6,
                      "suit": "s",
                    },
                  ],
                  "playerWins": undefined,
                  "pot": 1000,
                  "slots": Array [
                    Object {
                      "num": 7,
                      "suit": "h",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 2,
                      "suit": "d",
                    },
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    null,
                    Object {
                      "num": 10,
                      "suit": "c",
                    },
                    null,
                    Object {
                      "num": 12,
                      "suit": "h",
                    },
                    null,
                    null,
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 2,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    null,
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 7,
                },
              },
              Object {
                "children": Array [],
                "name": "Spinner23",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 200,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides24",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter27",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter28",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter29",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter30",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter31",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter32",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete26",
                    "state": Object {},
                  },
                ],
                "name": "Ball25",
                "state": Object {},
              },
            ],
            "name": "Player20",
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "lowerRampLit": false,
              "mbsQualified": Array [
                [Function],
              ],
              "miniReady": false,
              "modesQualified": Array [],
              "poker": "Poker22",
              "rampUp": true,
              "score": 10000,
            },
          },
        ],
        "name": "Game19",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine10",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 3,
        "lastChange": 34289,
        "lastClosed": 34289,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 3",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
